# linux_aupe

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool  linux_aupe.IAB  linux_aupe.IAD  linux_aupe.IMB  linux_aupe.IMD  linux_aupe.PFI  linux_aupe.PO  linux_aupe.PR  linux_aupe.PRI  linux_aupe.PS  linux_aupe.SearchResults  linux_aupe.WK3  linux_aupe@github.IAB  linux_aupe@github.IAD  linux_aupe@github.IMB  linux_aupe@github.IMD  linux_aupe@github.PFI  linux_aupe@github.PO  linux_aupe@github.PR  linux_aupe@github.PRI  linux_aupe@github.PS
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
src/include/: swap.h  unpipc.h
src/ipcs/core/: Makefile  Makefile.am  Makefile.in  test  test.c
src/ipcs/core/.deps/: test.Po
src/lib/: Makefile  Makefile.am  Makefile.in  error.c  px_ipc_name.c  set_noblock.c  signal.c  spipe.c  swap.c  wrapstdio.c  wrapunix.c
src/lib/.deps/: error.Plo  error.Po  px_ipc_name.Plo  px_ipc_name.Po  set_noblock.Plo  set_noblock.Po  spipe.Plo  spipe.Po  swap.Po  wrapstdio.Plo  wrapstdio.Po  wrapunix.Plo  wrapunix.Po
src/mutex/: Makefile  Makefile.am  Makefile.in  prodcons3.c
src/pipe/: Makefile  Makefile.am  Makefile.in  client.c  fduplex  fduplex.c  mainfifo.c  mainpipe  mainpipe.c  mainpopen.c  server.c
src/pipe/.deps/: client.Po  fduplex.Po  mainfifo.Po  mainpipe.Po  server.Po
src/pipemsg/: Makefile  Makefile.am  Makefile.in  client.c  mesg.h  mesg_recv.c  mesg_send.c  pipeconf  pipeconf.c  server.c  test1.c
src/pipemsg/.deps/: mesg_recv.Po  mesg_send.Po  pipeconf.Po  server.Po  test1.Po
src/pxmsg/: Makefile  Makefile.am  Makefile.in  mqcreate.c  mqcreate1  mqcreate1.c  mqgetattr  mqgetattr.c  mqnotifythread1.c  mqsignotify1.c  mqsignotify2.c  mqsignotify3.c  mqsignotify4.c  mqsysconf.c  mqunlink.c  msgrecv.c  msgsend.c
src/pxmsg/.deps/: mqcreate.Po  mqcreate1.Po  mqgetattr.Po  mqsysconf.Po  mqunlink.Po  msgrecv.Po  msgsend.Po
src/rtsignals/: Makefile  Makefile.am  Makefile.in
src/svipc/: Makefile  Makefile.am  Makefile.in  ftok  ftok.c
src/svipc/.deps/: ftok.Po
src/svmsg/: Makefile  Makefile.am  Makefile.in  ctl.c  msgrcv.c  msgsnd.c  slot  slot.c  slotseq  slotseq.c  testumask  testumask.c
src/svmsg/.deps/: slot.Po  slotseq.Po  testumask.Po
src/svmsgcliserv/: svmsg.h
