#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([linux_aupe], [1.0], [happyAnger6@163.com])
AC_CONFIG_SRCDIR([src/ipcs/core/test.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(linux_aupe,1.0)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h])
AC_PROG_RANLIB
# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

#AC_CONFIG_FILES([src/ipcs/core/Makefile
#                 src/lib/Makefile])
AC_OUTPUT([Makefile
	src/ipcs/core/Makefile
        src/lib/Makefile])
