noinst_PROGRAMS=prodcons2 prodcons3 prodcons6
prodcons2_SOURCES=prodcons2.c
prodcons2_LDADD=$(top_srcdir)/src/lib/libunpipc.la 
prodcons2_LDFLAGS=-D_GNU_SOURCE
DEFS+=-D_GNU_SOURCE

prodcons3_SOURCES=prodcons3.c
prodcons3_LDADD=$(top_srcdir)/src/lib/libunpipc.la 
prodcons3_LDFLAGS=-D_GNU_SOURCE

prodcons6_SOURCES=prodcons6.c
prodcons6_LDADD=$(top_srcdir)/src/lib/libunpipc.la 
prodcons6_LDFLAGS=-D_GNU_SOURCE
