noinst_PROGRAMS=mainpipe
mainpipe_SOURCES=mainpipe.c server.c client.c
mainpipe_LDADD=$(top_srcdir)/src/lib/libunpipc.la
mainpipe_LDFLAGS=-D_GNU_SOURCE
DEFS+=-D_GNU_SOURCE

noinst_PROGRAMS=fduplex
fduplex_SOURCES=fduplex.c
fduplex_LDADD=$(top_srcdir)/src/lib/libunpipc.la
fduplex_LDFLAGS=-D_GNU_SOURCE

noinst_PROGRAMS=fduplex
fduplex_SOURCES=fduplex.c
fduplex_LDADD=$(top_srcdir)/src/lib/libunpipc.la
fduplex_LDFLAGS=-D_GNU_SOURCE

noinst_PROGRAMS=mainfifo
mainfifo_SOURCES=mainfifo.c server.c client.c
mainfifo_LDADD=$(top_srcdir)/src/lib/libunpipc.la
mainfifo_LDFLAGS=-D_GNU_SOURCE
