noinst_PROGRAMS=mqcreate1 mqcreate mqunlink msgrecv msgsend mqgetattr mqsysconf mqsignotify1 mqsignotify2 mqsignotify3 mqsignotify4 mqnotifythread1
mqcreate1_SOURCES=mqcreate1.c
mqcreate1_LDADD=$(top_srcdir)/src/lib/libunpipc.la
mqcreate1_LDFLAGS=-D_GNU_SOURCE
DEFS+=-D_GNU_SOURCE

mqunlink_SOURCES=mqunlink.c
mqunlink_LDADD=$(top_srcdir)/src/lib/libunpipc.la
mqunlink_LDFLAGS=-D_GNU_SOURCE

mqgetattr_SOURCES=mqgetattr.c
mqgetattr_LDADD=$(top_srcdir)/src/lib/libunpipc.la
mqgetattr_LDFLAGS=-D_GNU_SOURCE

mqcreate_SOURCES=mqcreate.c
mqcreate_LDADD=$(top_srcdir)/src/lib/libunpipc.la
mqcreate_LDFLAGS=-D_GNU_SOURCE

msgrecv_SOURCES=msgrecv.c
msgrecv_LDADD=$(top_srcdir)/src/lib/libunpipc.la
msgrecv_LDFLAGS=-D_GNU_SOURCE

msgsend_SOURCES=msgsend.c
msgsend_LDADD=$(top_srcdir)/src/lib/libunpipc.la
msgsend_LDFLAGS=-D_GNU_SOURCE

mqsysconf_SOURCES=mqsysconf.c
mqsysconf_LDADD=$(top_srcdir)/src/lib/libunpipc.la
mqsysconf_LDFLAGS=-D_GNU_SOURCE

mqsysconf_SOURCES=mqsignotify1.c
mqsignotify1_LDADD=$(top_srcdir)/src/lib/libunpipc.la
mqsignotify1_LDFLAGS=-D_GNU_SOURCE

mqsysconf_SOURCES=mqsignotify2.c
mqsignotify2_LDADD=$(top_srcdir)/src/lib/libunpipc.la
mqsignotify2_LDFLAGS=-D_GNU_SOURCE

mqsysconf_SOURCES=mqsignotify3.c
mqsignotify3_LDADD=$(top_srcdir)/src/lib/libunpipc.la
mqsignotify3_LDFLAGS=-D_GNU_SOURCE

mqsysconf_SOURCES=mqsignotify4.c
mqsignotify4_LDADD=$(top_srcdir)/src/lib/libunpipc.la
mqsignotify4_LDFLAGS=-D_GNU_SOURCE

mqsysconf_SOURCES=mqnotifythread1.c
mqnotifythread1_LDADD=$(top_srcdir)/src/lib/libunpipc.la
mqnotifythread1_LDFLAGS=-D_GNU_SOURCE
