noinst_PROGRAMS=slot
slot_SOURCES=slot.c
slot_LDADD=$(top_srcdir)/src/lib/libunpipc.la
slot_LDFLAGS=-D_GNU_SOURCE
DEFS+=-D_GNU_SOURCE

noinst_PROGRAMS=testumask
testumask_SOURCES=testumask.c
testumask_LDADD=$(top_srcdir)/src/lib/libunpipc.la
testumask_LDFLAGS=-D_GNU_SOURCE

noinst_PROGRAMS=slotseq
slotseq_SOURCES=slotseq.c
slotseq_LDADD=$(top_srcdir)/src/lib/libunpipc.la
slotseq_LDFLAGS=-D_GNU_SOURCE

